aded style files

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
+		<link rel="stylesheet" type="text/css" href="css/css.reset.css">
+		<link rel="sytelsheet" type="text/css" href="css/Style.css">
 </head>
 <body>	
 		<header>
-			<nav>
+			<nav id="main-navbar">
+			  <div id="nav-container" class"container">
 				<ul class="nav">
 					<li> <a href="#">Resume</a></li>
 					<li> <a href="HOG.html">House of God, Inc.</a></li>
 					<li> <a href="tshirts.html">LitTees, LLC</a></li>
 
 				</ul>
+			  </div>
 			</nav>
 			<h1><strong>Antonio Reginald Jackson, SR</strong></h1>
 		</header>
