--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
 		<link rel="stylesheet" type="text/css" href="css/css.reset.css">
-		<link rel="sytelsheet" type="text/css" href="css/Style.css">
+		<link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 <body>	
 		<header>
