change file names to figure out error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>	
 		<header>
 			<nav id="main-navbar">
+			  <div id="navbar-container" class="container">
 			  	<ul>
 					<li> <a href="#">Resume</a></li>
 					<li> <a href="HOG.html">House of God, Inc.</a></li>
@@ -16,7 +17,7 @@
 
 				</ul>
 			  </div>
-			</nav>
+			 </nav>
 			<h1><strong>Antonio Reginald Jackson, SR</strong></h1>
 		</header>
 
