--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
-		<link rel="stylesheet" type="text/css" href="css/css.reset.css">
-		<link rel="stylesheet" type="text/css" href="css/Style.css">
+		<link rel="stylesheet" type="text/css" href="norm.reset.css">
+		<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>	
 		<header>
 			<nav id="main-navbar">
-			  <div id="navbar-container" class="container">
+			 <div id="navbar-container" class="container"> 
 			  	<ul>
 					<li> <a href="#">Resume</a></li>
 					<li> <a href="HOG.html">House of God, Inc.</a></li>
@@ -18,47 +18,53 @@
 				</ul>
 			  </div>
 			 </nav>
-			<h1><strong>Antonio Reginald Jackson, SR</strong></h1>
+			  <h1><strong>Antonio Reginald Jackson, SR</strong></h1>
 		</header>
 
 
-<p>Administrative information technology professional with 11 years of exceptional and proven services. Proficient in providing front line support, leadership and administrative functions. Exceptional organizational and time management skills, detailed oriented, proactive, and self-starter. Customer focused, courteous, dedicated to providing business acumen in all interactions, success planning and initiate appropriate action and assure quality of service to all clients. Knowledgeable, and proficient in the use of the Microsoft Office; excel, power point, outlook, and database management.</p>
+		<div id="objective">
+		  <p>Administrative information technology professional with 11 years of exceptional and proven services. Proficient in providing front line support, leadership and administrative functions. Exceptional organizational and time management skills, detailed oriented, proactive, and self-starter. Customer focused, courteous, dedicated to providing business acumen in all interactions, success planning and initiate appropriate action and assure quality of service to all clients. Knowledgeable, and proficient in the use of the Microsoft Office; excel, power point, outlook, and database management.</p>
+		</div>
+		<div id="education"> 
+		  <h3><strong>Education:</strong></h3>
+		
+		<ul>
+		  <li>A.A. Business Economics, Harold Washington University, 2018</li>
+		  <li>B.A.  Business Administration, Illinois Institute of Technology, 2021</li>
+		  <li>Minor in Information Technology Management, 2021</li>
+		  <li>M.S.  Cyber Security, 2021</li>
+		</ul>
 
-<h3><strong>Education:</strong></h3>
-<ul>
-		<li>A.A. Business Economics, Harold Washington University, 2018</li>
-		<li>B.A.  Business Administration, Illinois Institute of Technology, 2021</li>
-		<li>Minor in Information Technology Management, 2021</li>
-		<li>M.S.  Cyber Security, 2021</li>
-</ul>
-
-<h3><strong>Skills:</strong></h3>
-<ul>
-		<li>Microsoft Office</li>
-		<li>CompTIA+ Certification, 2020</li>
-		<li>NET+ Certification, 2021</li>
-		<li>Sec+ Certification, 2022</li>
-</ul>
-
-<h3><strong>Experience:</strong></h3>
+		<h3><strong>Skills:</strong></h3>
+		  <ul>
+			<li>Microsoft Office</li>
+			<li>CompTIA+ Certification, 2020</li>
+			<li>NET+ Certification, 2021</li>
+			<li>Sec+ Certification, 2022</li>
+		</ul>
+		</div>
+		
+		<div id="experience">
+		  <h3><strong>Experience:</strong></h3>
 	
-<h4><strong><em>Levy Restaurants Incorporated, Guaranteed Rate Field,</em></strong><strong>  2014 - present</strong>
-<strong><em>Chicago, IL,</em></strong></h4>
-<p><strong> Premium Club Supervisor</strong><p>
-<ul>
-		<li>Payroll and Scheduling Reports</li>
-		<li>Hiring, Training, and Coached Associates</li>
-		<li>GOS reporting</li>
-		<li>Beverage Yields</li>
-		<li>Menu Set and Formatting</li>
-		<li>Administrative Functions</li>
-</ul>
+		  <h4><strong><em>Levy Restaurants Incorporated, Guaranteed Rate Field,</em></strong><strong>  2014 - present</strong>
+		  <strong><em>Chicago, IL,</em></strong></h4>
+		  <p><strong> Premium Club Supervisor</strong><p>
+		
+		  <ul class="exp">
+		    <li>Payroll and Scheduling Reports</li>
+		    <li>Hiring, Training, and Coached Associates</li>
+		    <li>GOS reporting</li>
+		    <li>Beverage Yields</li>
+		    <li>Menu Set and Formatting</li>
+		    <li>Administrative Functions</li>
+		  </ul>
+		
+		<h4><strong><em>Christopher and Banks Corporation, Distribution Center,</em></strong><strong>  2007 - 2014</strong>
+		<strong><em>Plymouth, MN,</em></strong></h4>
+		<p><strong> Team Lead, Operation Supervisor</strong></p>
 
-<h4><strong><em>Christopher and Banks Corporation, Distribution Center,</em></strong><strong>  2007 - 2014</strong>
-<strong><em>Plymouth, MN,</em></strong></h4>
-<p><strong> Team Lead, Operation Supervisor</strong></p>
-
-<ul>
+		<ul>
 		<li>Responsible for FIFO Distribution</li>
 		<li>Create, Implement and Maintain Inter-departmental Best Practices</li>
 		<li>Create, Implement and Maintain Quantifiable Performance Measurements</li>
