added border to page 1

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
 		</header>
 
 
-		<div id="objective">
+		<div id="border">
 		  <p>Administrative information technology professional with 11 years of exceptional and proven services. Proficient in providing front line support, leadership and administrative functions. Exceptional organizational and time management skills, detailed oriented, proactive, and self-starter. Customer focused, courteous, dedicated to providing business acumen in all interactions, success planning and initiate appropriate action and assure quality of service to all clients. Knowledgeable, and proficient in the use of the Microsoft Office; excel, power point, outlook, and database management.</p>
-		</div>
-		<div id="education"> 
+		
 		  <h3><strong>Education:</strong></h3>
 		
 		<ul>
@@ -42,7 +41,7 @@
 			<li>NET+ Certification, 2021</li>
 			<li>Sec+ Certification, 2022</li>
 		</ul>
-		</div>
+		
 		
 		<div id="experience">
 		  <h3><strong>Experience:</strong></h3>
@@ -89,9 +88,11 @@
 		<li>Order Picker, Electric, Propane, and Reach Pallet Rider and Forklift Certifications and Trainer Certified</li>
 
 </ul>
+		</div>
+		
 <p><em>References Available Upon Request</em></p>
 
-
+		</div>
 
 </body>
 </html>
