added fonts and style to resume

--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
+		<link href="https://fonts.googleapis.com/css?family=Barlow|Work+Sans&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="norm.reset.css">
 		<link rel="stylesheet" type="text/css" href="Style.css">
+		<style type="text/css">
+		  h1, h3, h4 {
+		  font-family: 'Barlow', cursive;
+		  font-weight: 400;
+		  }
+		  
+		  p {
+		  font-family: 'Work Sans', serif;
+		    }
+		</style>
 </head>
 <body>	
 		<header>
@@ -16,8 +27,8 @@
 					<li> <a href="tshirts.html">LitTees, LLC</a></li>
 
 				</ul>
-			  </div>
-			 </nav>
+			 </div>
+			</nav>
 			  <h1><strong>Antonio Reginald Jackson, SR</strong></h1>
 		</header>
 
