--- a/tshirts.html
+++ b/tshirts.html
@@ -4,38 +4,50 @@
 		<meta charset ="utf-8">
 
 		<title>LitTees, LLC</title>
+		<link rel="stylesheet" type="text/css" href="norm.reset.css">
+		<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
 		<header>
-			<nav>
+			<div id="shirtcontainer">
+		<header>
+			<nav id="main-navbar">
+			  <div id="navbar-container" class"container">
 				<ul class="nav">
 					<li> <a href="index.html">Resume</a></li>
 					<li> <a href="HOG.html">House of God, Inc.</a></li>
 					<li> <a href="#">LitTees, LLC</a></li>
 
 				</ul>
+			  </div>
 			</nav>
 		
 			<h1>LitTees, LLC</h1>
 			<h3><em>Where we turn Memes into Tees!!</em></h3>
 		</header>
-	
-<h2>What is the PLAN?</h2>
-<h3>T-Shirts for EVERYONE!</h3>
-	
-<p>I wanted to present a website for a business that would sell Popular Meme Themed T-Shirts!</p>
-<p> We we would like to offer clients the ability to create their favorite t-shirt from a meme of their choice.</p>
-<p> I believe at a reasonable price there is a market for ages 15>45 age range, and that are a part of the social media culture!.</p>
+<div id="title">	
+<h2 class="headers">What is the PLAN?</h2>
+<h3 class="headers">T-Shirts for EVERYONE!</h3>
+</div>
+<div id="shirtmain" class="para">	
+<h3 class="para">Mission</h3>
+<p class="para">I wanted to present a website for a business that would sell Popular Meme Themed T-Shirts!</p>
+<p class="para"> We we would like to offer clients the ability to create their favorite t-shirt from a meme of their choice.</p>
+<p class="para"> I believe at a reasonable price there is a market for ages 15>45 age range, and that are a part of the social media culture!.</p>
+</div>
 
-
+<div id="video">
 <iframe width="598" height="249" src="https://www.youtube.com/embed/subeIZgLquI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p>A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
+<p class="para">A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
+</div>
 
+<section>
 <img src="images/FBoss.jpg" alt="Floss Like a Boss">
 <img src="images/HM.jpg" alt="Hugh Mungus">
 <img src="images/mlm.jpg" alt="Meme Lives Matter">
 <img src="images/Skittles.jpg" alt="Skittles">
 <img src="images/weapon.jpg" alt="Funny Weapons">
+</section>
 
 </body>
 </html>
