--- a/tshirts.html
+++ b/tshirts.html
@@ -38,7 +38,7 @@
 
 <div id="video">
 <iframe width="598" height="249" src="https://www.youtube.com/embed/subeIZgLquI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p class="para">A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
+<p class="para2">A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
 </div>
 
 <section>
