--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
-		<link href="https://fonts.googleapis.com/css?family=Barlow|Work+Sans&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Oxygen|Sen&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="norm.reset.css">
 		<link rel="stylesheet" type="text/css" href="Style.css">
 		 <style type="text/css">
 		  h3, h4 {
-		  font-family: 'Barlow', cursive;
+		  font-family: 'Oxygen', cursive;
 		  font-weight: 400;
 		  }
 		  
 		  p, ul {
-		  font-family: 'Work Sans', serif;
+		  font-family: 'Sen', serif;
 		    }
 		</style>
 </head>
