fixing html error

--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
-		<link href="https://fonts.googleapis.com/css?family=Oxygen|Sen&display=swap" rel="stylesheet">
+		
 		<link rel="stylesheet" type="text/css" href="norm.reset.css">
 		<link rel="stylesheet" type="text/css" href="Style.css">
-		 <style type="text/css">
-		  h3, h4 {
-		  font-family: 'Oxygen', cursive;
-		  font-weight: 400;
-		  }
-		  
-		  p, ul {
-		  font-family: 'Sen', serif;
-		    }
-		</style>
+		 
 </head>
 <body>	
 		<header>
@@ -33,7 +24,7 @@
 		</header>
 
 
-		<div id="border">
+		<div id="border" class ="content">
 		  <p>Administrative information technology professional with 11 years of exceptional and proven services. Proficient in providing front line support, leadership and administrative functions. Exceptional organizational and time management skills, detailed oriented, proactive, and self-starter. Customer focused, courteous, dedicated to providing business acumen in all interactions, success planning and initiate appropriate action and assure quality of service to all clients. Knowledgeable, and proficient in the use of the Microsoft Office; excel, power point, outlook, and database management.</p>
 		
 		  <h3><strong>Education:</strong></h3>
