--- a/HOG.html
+++ b/HOG.html
@@ -4,25 +4,15 @@
 	<meta charset="utf-8">
 		
 		<title>House of God, Inc</title>
-		<link href="https://fonts.googleapis.com/css?family=Anton|Bitter&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="norm.reset.css">
 		<link rel="stylesheet" type="text/css" href="Style.css">
-		<style type="text/css">
-		  p {
-		    font-family: 'Bitter', cursive;
-			}
-		  h2, h3 {
-		    font-family: 'Anton', serif;
-			font-weight: 600;
-			position: relative;
-			
-		</style>
+		
 </head>
 <body>
 	<div id="mycontainer">
 		<header>
 			<nav id="main-navbar">
-			  <div id="navbar-container" class"container">
+			  <div id="navbar-container" class="container">
 				<ul class="nav">
 					<li> <a href="index.html">Resume</a></li>
 					<li> <a href="#">House of God, Inc.</a></li>
@@ -51,12 +41,12 @@
 
 	</div>
 	
-<div id="charity">
+<div id="charity" class="body">
   <img class="event" src="church/Charity.jpg" alt="Charity Event">
 
 <h3>Vision: Advance the Kingdom Of God</h3>
 	</div>
-<div id="school">
+<div id="school" class="body">
   <img class="school" src="church/School.jpg" alt="Sunday School Service">
 
 <h3>Mission: Teach, Preach, Lead, and Love using the power of God and the unity of fellowship</h3>
