--- a/tshirts.html
+++ b/tshirts.html
@@ -8,11 +8,10 @@
 		<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-		<header>
-			<div id="shirtcontainer">
+		<div id="shirtcontainer">
 		<header>
 			<nav id="main-navbar">
-			  <div id="navbar-container" class"container">
+			  <div id="navbar-container" class="container">
 				<ul class="nav">
 					<li> <a href="index.html">Resume</a></li>
 					<li> <a href="HOG.html">House of God, Inc.</a></li>
@@ -21,6 +20,7 @@
 				</ul>
 			  </div>
 			</nav>
+		</div>
 		
 			<h1>LitTees, LLC</h1>
 			<h3><em>Where we turn Memes into Tees!!</em></h3>
@@ -41,13 +41,12 @@
 <p class="para2">A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
 </div>
 
-<section>
+
 <img src="images/FBoss.jpg" alt="Floss Like a Boss">
 <img src="images/HM.jpg" alt="Hugh Mungus">
 <img src="images/mlm.jpg" alt="Meme Lives Matter">
 <img src="images/Skittles.jpg" alt="Skittles">
 <img src="images/weapon.jpg" alt="Funny Weapons">
-</section>
 
 </body>
 </html>
