moved files to folders

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	
 		  <h4><strong><em>Levy Restaurants Incorporated, Guaranteed Rate Field,</em></strong><strong>  2014 - present</strong>
 		  <strong><em>Chicago, IL,</em></strong></h4>
-		  <p><strong> Premium Club Supervisor</strong><p>
+		  <p><strong> Premium Club Supervisor</strong></p>
 		
 		  <ul>
 		    <li>Payroll and Scheduling Reports</li>
