--- a/HOG.html
+++ b/HOG.html
@@ -6,55 +6,44 @@
 		<title>House of God, Inc</title>
 		<link rel="stylesheet" type="text/css" href="norm.reset.css">
 		<link rel="stylesheet" type="text/css" href="Style.css">
-		
 </head>
+
 <body>
 	<div id="mycontainer">
-		<header>
-			<nav id="main-navbar">
-			  <div id="navbar-container" class="container">
-				<ul class="nav">
-					<li> <a href="index.html">Resume</a></li>
-					<li> <a href="#">House of God, Inc.</a></li>
-					<li> <a href="tshirts.html">LitTees, LLC</a></li>
-
-				</ul>
-			  </div>
-			</nav>
+	  <header>
+		<nav id="main-navbar">
+		  <div id="navbar-container" class="container">
+			<ul class="nav">
+			  <li> <a href="index.html">Resume</a></li>
+			  <li> <a href="#">House of God, Inc.</a></li>
+			  <li> <a href="tshirts.html">LitTees, LLC</a></li>
+			</ul>
+		  </div>
+		</nav>
 			<h1>HOUSE OF GOD, INC.</h1>
-		</header>
-	
-
-
+	</header>
 	<div id="main-para" class="body">
 	  <div id="officers">
-       <img src="church/Officers.jpg" alt="Church Officers">
+        <img src="images/church/Officers.jpg" alt="Church Officers">
 	  </div> 
-		<h2>The House Of God, Inc. Narrative</h2>
-	      <p> <span class="name">The House Of God, Inc.</span> was founded in 2018, in the Morgan Park area, as a non-denominational church. The Pastors, Jonathan and Claudette Short Sr. are a married couple of 30 years and have seven children that was raised from a strict pentecostal background. Their Ministry, The House Of God has a very small congregation of sixteen members. The church views the Bible as the infallible Word of God, inspired, and authoritative in our lives. The House Of God’s focus is on biblically centered teaching of the Word of God.</p>
-
-	      <p>The leadership believes that the church should be actively involved in many community activities such as: Visiting the local homeless shelters, volunteering at soup kitchens, making regularly Jail and Hospital visits, also supporting organizations that help educate our youth on gun violence and women that are at risk of domestic violence.</p>
-
-	      <p>The House Of God has a Youth Sunday School Program, allowing the young students to teach classes with the guidance of a support leader to ensure that the correct exegesis is being applied to Biblical scripture. The church also believes in different forms of worship; Singing conducted by worship leaders, worship in giving, and communion.</p>
-
-	      <p>The House Of God, Inc is looking to relocate, this year (2020) to a larger facility that will allow the church to expand its vision with a ministry owned day care, to off-set expenditures to the Pastors fund and bring support to the Morgan Park area by employing its residents.</p> 
-
+	   <h2>The House Of God, Inc. Narrative</h2>
+	    <p> <span class="name">The House Of God, Inc.</span> was founded in 2018, in the Morgan Park area, as a non-denominational church. The Pastors, Jonathan and Claudette Short Sr. are a married couple of 30 years and have seven children that was raised from a strict pentecostal background. Their Ministry, The House Of God has a very small congregation of sixteen members. The church views the Bible as the infallible Word of God, inspired, and authoritative in our lives. The House Of God’s focus is on biblically centered teaching of the Word of God.</p>
+	    <p>The leadership believes that the church should be actively involved in many community activities such as: Visiting the local homeless shelters, volunteering at soup kitchens, making regularly Jail and Hospital visits, also supporting organizations that help educate our youth on gun violence and women that are at risk of domestic violence.</p>
+	    <p>The House Of God has a Youth Sunday School Program, allowing the young students to teach classes with the guidance of a support leader to ensure that the correct exegesis is being applied to Biblical scripture. The church also believes in different forms of worship; Singing conducted by worship leaders, worship in giving, and communion.</p>
+	    <p>The House Of God, Inc is looking to relocate, this year (2020) to a larger facility that will allow the church to expand its vision with a ministry owned day care, to off-set expenditures to the Pastors fund and bring support to the Morgan Park area by employing its residents.</p> 
 	</div>
 	
-<div id="charity" class="body">
-  <img class="event" src="church/Charity.jpg" alt="Charity Event">
-
-<h3>Vision: Advance the Kingdom Of God</h3>
+	<div id="charity" class="body">
+	  <img class="event" src="images/church/Charity.jpg" alt="Charity Event">
+	  <h3>Vision: Advance the Kingdom Of God</h3>
 	</div>
-<div id="school" class="body">
-  <img class="school" src="church/School.jpg" alt="Sunday School Service">
-
-<h3>Mission: Teach, Preach, Lead, and Love using the power of God and the unity of fellowship</h3>
-</div>
-
-<div id="event">
-<img class="shop" src="church/Workshop.jpg" alt="Work Shop Event">
-</div>
-</div>
+	<div id="school" class="body">
+      <img class="school" src="images/church/School.jpg" alt="Sunday School Service">
+		<h3>Mission: Teach, Preach, Lead, and Love using the power of God and the unity of fellowship</h3>
+	</div>
+	<div id="event">
+	  <img class="shop" src="images/church/Workshop.jpg" alt="Work Shop Event">
+    </div>
+   </div>
 </body>
 </html>
