added style back

--- a/HOG.html
+++ b/HOG.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 		
 		<title>House of God, Inc</title>
-		<link rel="stylesheet" type="text/css" href="norm.reset.css">
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="css/norm.reset.css">
+		<link rel="stylesheet" type="text/css" href="css/Style.css">
 </head>
 
 <body>
