--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 		<meta charset="UTF-8">
 		<title>My Resume!</title>
-		<link rel="stylesheet" type="text/css" href="norm.reset.css">
-		<link rel="stylesheet" type="text/css" href="Style.css">
+		<link rel="stylesheet" type="text/css" href="css/norm.reset.css">
+		<link rel="stylesheet" type="text/css" href="css/Style.css">
 		 
 </head>
 <body>	
