updated style for HOG pics

--- a/HOG.html
+++ b/HOG.html
@@ -39,7 +39,9 @@
 	</div>
 	<div id="school" class="body">
       <img class="school" src="images/church/School.jpg" alt="Sunday School Service">
-		<h3>Mission: Teach, Preach, Lead, and Love using the power of God and the unity of fellowship</h3>
+		<h3>Mission: Teach, Preach, Lead,</h3>
+		<h3>and Love using the power of God</h3>
+		<h3>and the unity of fellowship</h3>
 	</div>
 	<div id="event">
 	  <img class="shop" src="images/church/Workshop.jpg" alt="Work Shop Event">
