--- a/HOG.html
+++ b/HOG.html
@@ -43,9 +43,9 @@
 		<h3>and Love using the power of God</h3>
 		<h3>and the unity of fellowship</h3>
 	</div>
-	<div id="event">
+	<div id="workshop">
 	  <img class="shop" src="images/church/Workshop.jpg" alt="Work Shop Event">
     </div>
-   </div>
+ </div>
 </body>
 </html>
