updated html files with sections

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 		</ul>
       </div>
 		</nav>
+	  <section>
 		  <h1><strong>Antonio Reginald Jackson, SR</strong></h1>
   </header>
 	<div id="border" class="content">
+	  <section>
 	  <p>Administrative information technology professional with 11 years of exceptional and proven services. Proficient in providing front line support, leadership and administrative functions. Exceptional organizational and time management skills, detailed oriented, proactive, and self-starter. Customer focused, courteous, dedicated to providing business acumen in all interactions, success planning and initiate appropriate action and assure quality of service to all clients. Knowledgeable, and proficient in the use of the Microsoft Office; excel, power point, outlook, and database management.</p>
  	    <h3><strong>Education:</strong></h3>
 		  <ul>
@@ -36,6 +38,8 @@
 			<li>NET+ Certification, 2021</li>
 			<li>Sec+ Certification, 2022</li>
           </ul>
+	  </section>
+	  <section>
 		<h3><strong>Experience:</strong></h3>
 		  <h4><strong><em>Levy Restaurants Incorporated, Guaranteed Rate Field,</em></strong><strong>  2014 - present</strong>
 		  <strong><em>Chicago, IL,</em></strong></h4>
@@ -48,6 +52,8 @@
 		  <li>Menu Set and Formatting</li>
 		  <li>Administrative Functions</li>
 		</ul>
+	  </section>
+	  <section>
 		<h4><strong><em>Christopher and Banks Corporation, Distribution Center,</em></strong><strong>  2007 - 2014</strong>
 		<strong><em>Plymouth, MN,</em></strong></h4>
 		<p><strong> Team Lead, Operation Supervisor</strong></p>
@@ -64,6 +70,8 @@
 		  <li>Conflict Management Training</li>
 		  <li>Order Picker, Electric, Propane, and Reach Pallet Rider and Forklift Certifications and Trainer Certified</li>
 		</ul>
+	  </section>
+	  <section>
 		<h4><strong><em>Liberty Diversified Industry, SAFco Distribution Center</em></strong><strong>   2003 - 2007</strong>
 		<strong><em>New Hope, MN,</em></strong></h4>
 		<p><strong> Temp Service Lead/Operations Trainer</strong></p>
@@ -73,7 +81,8 @@
 		  <li>Inbound, Cycle Counting, Order Picker, and Inventory Specialist Trainer</li>
 		  <li>Order Picker, Electric, Propane, and Reach Pallet Rider and Forklift Certifications and Trainer Certified</li>
 		</ul>
-		<p><em>References Available Upon Request</em></p>
+	  </section>
+	  	<p><em>References Available Upon Request</em></p>
 	</div>
 </body>
 </html>
