--- a/tshirts.html
+++ b/tshirts.html
@@ -21,35 +21,37 @@
 			<h1>LitTees, LLC</h1>
 			<h3><em>Where we turn Memes into Tees!!</em></h3>
 	</header>
-	  <div id="title">	
-        <h2 class="headers">What is the PLAN?</h2>
-	    <h3 class="headers">T-Shirts for EVERYONE!</h3>
-      </div>
-	  <div id="shirtmain" class="para">	
-		<h3 class="para">Mission</h3>
-		  <p class="para">I wanted to present a website for a business that would sell Popular Meme Themed T-Shirts!</p>
-		  <p class="para"> We we would like to offer clients the ability to create their favorite t-shirt from a meme of their choice.</p>
-		  <p class="para"> I believe at a reasonable price there is a market for ages 15>45 age range, and that are a part of the social media culture!.</p>
-	  </div>
-	  <div id="video">
-		<iframe width="598" height="249" src="https://www.youtube.com/embed/subeIZgLquI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<div id="title">	
+	  <h2 class="headers">What is the PLAN?</h2>
+	  <h3 class="headers">T-Shirts for EVERYONE!</h3>
+	</div>
+	<div id="shirtmain" class="para">	
+	  <section>
+	  <h3 class="para">Mission</h3>
+		<p class="para">I wanted to present a website for a business that would sell Popular Meme Themed T-Shirts!</p>
+		<p class="para"> We we would like to offer clients the ability to create their favorite t-shirt from a meme of their choice.</p>
+		<p class="para"> I believe at a reasonable price there is a market for ages 15>45 age range, and that are a part of the social media culture!.</p>
+	  </section>
+    </div>
+	<div id="video">
+	  <iframe width="598" height="249" src="https://www.youtube.com/embed/subeIZgLquI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		  <p class="para2">A video of "How to make a T-Shirt from Design to Manufacturing!"</p>
-	  </div>
+	</div>
 	<div id="boss" class="img">
-	  <img src="images/FBoss.jpg" alt="Floss Like a Boss">
+	    <img src="images/FBoss.jpg" alt="Floss Like a Boss">
 	</div>
 	<div id="mun" class="img">
-	  <img src="images/HM.jpg" alt="Hugh Mungus">
-	</div>
-	<div id="matter" class="img">
-	  <img src="images/mlm.jpg" alt="Meme Lives Matter">
-	</div>
+	    <img src="images/HM.jpg" alt="Hugh Mungus">
+	 </div>
+	  <div id="matter" class="img">
+	    <img src="images/mlm.jpg" alt="Meme Lives Matter">
+	  </div>
 	<div id="skit" class="img">
 	  <img src="images/Skittles.jpg" alt="Skittles">
-	</div>
-	<div id="weapon" class="img">
+	 </div>
+	 <div id="weapon" class="img">
 	  <img src="images/weapon.jpg" alt="Funny Weapons">
-	</div>
+	 </div>
 </div>
 </body>
 </html>
