--- a/HOG.html
+++ b/HOG.html
@@ -25,7 +25,9 @@
 	    <div id="officers">
 		<section>
         <img src="images/church/Officers.jpg" alt="Church Officers">
-		 </div> 
+		 </section>
+		 </div>
+	  <section>
 	      <h2>The House Of God, Inc. Narrative</h2>
 	      <p> <span class="name">The House Of God, Inc.</span> was founded in 2018, in the Morgan Park area, as a non-denominational church. The Pastors, Jonathan and Claudette Short Sr. are a married couple of 30 years and have seven children that was raised from a strict pentecostal background. Their Ministry, The House Of God has a very small congregation of sixteen members. The church views the Bible as the infallible Word of God, inspired, and authoritative in our lives. The House Of God’s focus is on biblically centered teaching of the Word of God.</p>
 	      <p>The leadership believes that the church should be actively involved in many community activities such as: Visiting the local homeless shelters, volunteering at soup kitchens, making regularly Jail and Hospital visits, also supporting organizations that help educate our youth on gun violence and women that are at risk of domestic violence.</p>
@@ -42,7 +44,7 @@
 	<div id="school" class="body">
 	  <section>
       <img class="school" src="images/church/School.jpg" alt="Sunday School Service">
-	<h3>Mission: Teach, Preach, Lead,</h3>
+	  <h3>Mission: Teach, Preach, Lead,</h3>
 	  <h3>and Love using the power of God</h3>
 	  <h3>and the unity of fellowship</h3>
 	  </section>
