--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		</nav>
 	  <section>
 		  <h1><strong>Antonio Reginald Jackson, SR</strong></h1>
+	  </section>
   </header>
 	<div id="border" class="content">
 	  <section>
